--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Tailwind Starter Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
-  <body>
-    <div class="min-h-screen flex items-center justify-center">
-      <h1 class="text-5xl text-purple-600 font-sans">Greetings.</h1>
-    </div>
-  </body>
+<head>
+  <title>Tailwind Starter Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+</head>
+<body>
+<div class="font-opensans">
+<!-- 1 -->
+<div class="min-h-screen bg-cover bg-center" style="background-image: url('/dist/img/templates/annual-report-2-1.jpg')">
+  <div class="relative w-100 ml-10 md:ml-32 py-8 px-8 bg-tbr2-gray tracking-tighter">
+    <h1 class="pb-6 text-2xl leading-none font-extrabold text-tbr2-red uppercase">Annual report
+      <br />
+      2020-2021
+    </h1>
+
+    <ol class="list-decimal pl-4 text-tbr2-red font-extrabold uppercase">
+      <li class="pb-2"><span class="pl-6 text-tbr2-black">Chairman's speech</span></li>
+      <li class="pb-2"><span class="pl-6 text-tbr2-black">About our company</span></li>
+      <li class="pb-2"><span class="pl-6 text-tbr2-black">Client case study</span></li>
+      <li class="pb-2"><span class="pl-6 text-tbr2-black">Financial review</span></li>
+      <li class="pb-2"><span class="pl-6 text-tbr2-black">Future growth</span></li>
+    </ol>
+
+    <div class="absolute bottom-0 left-0 hidden md:block w-full h-2 bg-tbr2-red"></div>
+  </div>
+</div>
+</div>
+</body>
 </html>
