Fixes in first screen

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 </head>
 <body>
 <div class="font-opensans">
 <!-- 1 -->
-<div class="min-h-screen bg-cover bg-center" style="background-image: url('/dist/img/templates/annual-report-2-1.jpg')">
-  <div class="relative w-100 ml-10 md:ml-32 py-8 px-8 bg-tbr2-gray tracking-tighter">
-    <h1 class="pb-6 text-2xl leading-none font-extrabold text-tbr2-red uppercase">Annual report
-      <br />
-      2020-2021
-    </h1>
+<div class="relative min-h-screen">
+  <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 w-full h-full object-cover object-center" src="/dist/img/templates/annual-report-2-1.jpg">
 
-    <ol class="list-decimal pl-4 text-tbr2-red font-extrabold uppercase">
-      <li class="pb-2"><span class="pl-6 text-tbr2-black">Chairman's speech</span></li>
-      <li class="pb-2"><span class="pl-6 text-tbr2-black">About our company</span></li>
-      <li class="pb-2"><span class="pl-6 text-tbr2-black">Client case study</span></li>
-      <li class="pb-2"><span class="pl-6 text-tbr2-black">Financial review</span></li>
-      <li class="pb-2"><span class="pl-6 text-tbr2-black">Future growth</span></li>
-    </ol>
+  <div class="relative w-xl ml-10 md:ml-32 py-8 px-8 bg-tbr2-gray tracking-tighter">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
+      <h1 class="pb-6 text-2xl leading-none font-extrabold text-tbr2-red uppercase">
+        Annual report 2020-2021
+      </h1>
+    </div>
+
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
+      <ol class="list-decimal pl-4 text-tbr2-red font-extrabold uppercase">
+        <li class="pb-2"><span class="pl-6 text-tbr2-black">Chairman's speech</span></li>
+        <li class="pb-2"><span class="pl-6 text-tbr2-black">About our company</span></li>
+        <li class="pb-2"><span class="pl-6 text-tbr2-black">Client case study</span></li>
+        <li class="pb-2"><span class="pl-6 text-tbr2-black">Financial review</span></li>
+        <li class="pb-2"><span class="pl-6 text-tbr2-black">Future growth</span></li>
+      </ol>
+    </div>
 
     <div class="absolute bottom-0 left-0 hidden md:block w-full h-2 bg-tbr2-red"></div>
   </div>
