Complete second screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 </head>
 <body>
-<div class="font-opensans">
+<div class="font-opensans text-tbr2-black tracking-tighter">
 <!-- 1 -->
 <div class="relative min-h-screen">
   <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 w-full h-full object-cover object-center" src="/dist/img/templates/annual-report-2-1.jpg">
 
-  <div class="relative w-xl ml-10 md:ml-32 py-8 px-8 bg-tbr2-gray tracking-tighter">
+  <div class="relative w-xl ml-10 md:ml-32 p-8 bg-tbr2-gray">
     <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
-      <h1 class="pb-6 text-2xl leading-none font-extrabold text-tbr2-red uppercase">
+      <h1 class="pb-6 text-em-9 leading-none font-extrabold text-tbr2-red uppercase">
         Annual report 2020-2021
       </h1>
     </div>
@@ -31,6 +31,125 @@
     </div>
 
     <div class="absolute bottom-0 left-0 hidden md:block w-full h-2 bg-tbr2-red"></div>
+  </div>
+</div>
+<!-- 2 -->
+<div>
+  <div class="relative min-h-screen">
+    <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 w-full h-full object-cover object-center" src="/dist/img/templates/annual-report-2-2.jpg">
+
+    <div class="relative w-xl ml-10 md:ml-32 p-8 bg-tbr2-gray tracking-tighter">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
+        <h1 class="pb-6 text-em-9 leading-none font-extrabold uppercase">
+          Contents
+        </h1>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
+        <ol class="list-decimal pl-4 text-tbr2-red font-extrabold uppercase">
+          <li class="pb-2"><span class="pl-6 text-tbr2-black">Chairman's speech</span></li>
+          <li class="pb-2"><span class="pl-6 text-tbr2-black">About our company</span></li>
+          <li class="pb-2"><span class="pl-6 text-tbr2-black">Client case study</span></li>
+          <li class="pb-2"><span class="pl-6 text-tbr2-black">Financial review</span></li>
+          <li class="pb-2"><span class="pl-6 text-tbr2-black">Future growth</span></li>
+        </ol>
+      </div>
+
+      <div class="absolute bottom-0 left-0 w-full h-2 bg-tbr2-red"></div>
+    </div>
+  </div>
+
+  <div class="container-fluid py-8 pl-8 md:pl-20 pr-0">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text">
+      <h1 class="text-em-9 leading-none font-extrabold uppercase">
+        2020 annual report contents
+      </h1>
+    </div>
+
+    <div class="row mt-6 no-gutters md:mb-16">
+      <div class="col-md-6 row mb-8 md:mb-0 items-baseline no-gutters">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-auto mr-4 text-em-9 font-extrabold text-tbr2-red"><span>01</span></div>
+
+        <div class="col">
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 font-extrabold uppercase"><span>Chairman's speech</span></div>
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pr-8 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo id ipsa labore maiores nemo repellat rerum totam, ullam? Accusantium aut ducimus et illum nam neque. Ab accusantium architecto autem commodi, consequatur corporis cum cumque, ea earum eos esse est fuga fugit in inventore laudantium nam nesciunt nulla optio possimus quae quas quisquam sunt tempora totam voluptas voluptates! Accusantium ad adipisci alias, aliquam, aliquid aspernatur consequuntur cupiditate delectus deleniti distinctio dolorem dolores eius enim eos eveniet impedit incidunt ipsum iure minima molestiae necessitatibus nesciunt, perferendis quia quisquam repudiandae unde voluptate. Assumenda autem cum earum error exercitationem fugiat, illo molestias veniam!</span></div>
+        </div>
+      </div>
+
+      <div class="col-md-6 flex flex-col items-center h-64 p-0">
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-2.jpg">
+      </div>
+    </div>
+
+    <div class="row mt-6 no-gutters md:mb-16">
+      <div class="col-md-6 row mb-8 md:mb-0 items-baseline no-gutters">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-auto mr-4 text-em-9 font-extrabold text-tbr2-red"><span>02</span></div>
+
+        <div class="col">
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 font-extrabold uppercase"><span>About our company</span></div>
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pr-8 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo id ipsa labore maiores nemo repellat rerum totam, ullam? Accusantium aut ducimus et illum nam neque. Ab accusantium architecto autem commodi, consequatur corporis cum cumque, ea earum eos esse est fuga fugit in inventore laudantium nam nesciunt nulla optio possimus quae quas quisquam sunt tempora totam voluptas voluptates! Accusantium ad adipisci alias, aliquam, aliquid aspernatur consequuntur cupiditate delectus deleniti distinctio dolorem dolores eius enim eos eveniet impedit incidunt ipsum iure minima molestiae necessitatibus nesciunt, perferendis quia quisquam repudiandae unde voluptate. Assumenda autem cum earum error exercitationem fugiat, illo molestias veniam!</span></div>
+        </div>
+      </div>
+
+      <div class="col-md-6 flex flex-col items-center h-64 p-0">
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-3.jpg">
+      </div>
+    </div>
+
+    <div class="row mt-6 no-gutters md:mb-16">
+      <div class="col-md-6 row mb-8 md:mb-0 items-baseline no-gutters">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-auto mr-4 text-em-9 font-extrabold text-tbr2-red"><span>03</span></div>
+
+        <div class="col">
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 font-extrabold uppercase"><span>Our clients</span></div>
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pr-8 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo id ipsa labore maiores nemo repellat rerum totam, ullam? Accusantium aut ducimus et illum nam neque. Ab accusantium architecto autem commodi, consequatur corporis cum cumque, ea earum eos esse est fuga fugit in inventore laudantium nam nesciunt nulla optio possimus quae quas quisquam sunt tempora totam voluptas voluptates! Accusantium ad adipisci alias, aliquam, aliquid aspernatur consequuntur cupiditate delectus deleniti distinctio dolorem dolores eius enim eos eveniet impedit incidunt ipsum iure minima molestiae necessitatibus nesciunt, perferendis quia quisquam repudiandae unde voluptate. Assumenda autem cum earum error exercitationem fugiat, illo molestias veniam!</span></div>
+        </div>
+      </div>
+
+      <div class="col-md-6 flex flex-col items-center h-64 p-0">
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-2.jpg">
+      </div>
+    </div>
+
+    <div class="row mt-6 no-gutters md:mb-16">
+      <div class="col-md-6 row mb-8 md:mb-0 items-baseline no-gutters">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-auto mr-4 text-em-9 font-extrabold text-tbr2-red"><span>04</span></div>
+
+        <div class="col">
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 font-extrabold uppercase"><span>Financial review</span></div>
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pr-8 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo id ipsa labore maiores nemo repellat rerum totam, ullam? Accusantium aut ducimus et illum nam neque. Ab accusantium architecto autem commodi, consequatur corporis cum cumque, ea earum eos esse est fuga fugit in inventore laudantium nam nesciunt nulla optio possimus quae quas quisquam sunt tempora totam voluptas voluptates! Accusantium ad adipisci alias, aliquam, aliquid aspernatur consequuntur cupiditate delectus deleniti distinctio dolorem dolores eius enim eos eveniet impedit incidunt ipsum iure minima molestiae necessitatibus nesciunt, perferendis quia quisquam repudiandae unde voluptate. Assumenda autem cum earum error exercitationem fugiat, illo molestias veniam!</span></div>
+        </div>
+      </div>
+
+      <div class="col-md-6 flex flex-col items-center h-64 p-0">
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-2.jpg">
+      </div>
+    </div>
+
+    <div class="row mt-6 no-gutters md:mb-16">
+      <div class="col-md-6 row mb-8 md:mb-0 items-baseline no-gutters">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-auto mr-4 text-em-9 font-extrabold text-tbr2-red"><span>05</span></div>
+
+        <div class="col">
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 font-extrabold uppercase"><span>Future growth</span></div>
+          <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pr-8 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem explicabo id ipsa labore maiores nemo repellat rerum totam, ullam? Accusantium aut ducimus et illum nam neque. Ab accusantium architecto autem commodi, consequatur corporis cum cumque, ea earum eos esse est fuga fugit in inventore laudantium nam nesciunt nulla optio possimus quae quas quisquam sunt tempora totam voluptas voluptates! Accusantium ad adipisci alias, aliquam, aliquid aspernatur consequuntur cupiditate delectus deleniti distinctio dolorem dolores eius enim eos eveniet impedit incidunt ipsum iure minima molestiae necessitatibus nesciunt, perferendis quia quisquam repudiandae unde voluptate. Assumenda autem cum earum error exercitationem fugiat, illo molestias veniam!</span></div>
+        </div>
+      </div>
+
+      <div class="col-md-6 flex flex-col items-center h-64 p-0">
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-6.jpg">
+      </div>
+    </div>
+  </div>
+
+  <div class="py-20 px-8 bg-tbr2-black text-white text-center">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-8 font-extrabold uppercase"><span>Stay up to date on our latest news</span></div>
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at error est excepturi id iure nam nisi, non odit quibusdam repellat sapiente sit temporibus totam ullam? Ab autem blanditiis consequuntur, cum delectus distinctio, dolorum et facere fuga ipsum, modi mollitia nemo quibusdam quisquam quo saepe sed voluptates. Magni, pariatur ut!</span></div>
+
+    <div class="row justify-center max-w-lg mx-auto">
+      <input class="col-7 mr-2" />
+      <button class="col-3 p-0 font-extrabold uppercase bg-tbr2-red">Sign up</button>
+    </div>
   </div>
 </div>
 </div>
