--- a/src/index.html
+++ b/src/index.html
@@ -152,6 +152,95 @@
     </div>
   </div>
 </div>
+<!--3-->
+<div>
+  <div class="row px-16 pb-16 md:pb-32 no-gutters">
+    <div class="col-md-7 pt-20">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text md:pr-16 text-em-6 font-extrabold uppercase leading-tight text-tbr2-red"><span>Letter from the CEO</span></div>
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-10 font-extrabold uppercase leading-none"><span>Jane Williams</span></div>
+
+      <div  placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-3">
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto asperiores beatae cupiditate, delectus doloremque eligendi facilis in ipsam nihil quaerat quod rem repellendus, sed sequi sit ut veritatis voluptatibus. Ad asperiores, aspernatur deserunt, ducimus est facilis harum ipsum, iure minima minus non pariatur quia quidem quis repudiandae rerum vitae?</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cum debitis delectus dolor error, facilis nobis nostrum repellat voluptate voluptatibus! Aliquid debitis maiores reprehenderit rerum.</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi consequatur eveniet fugit mollitia quae similique sit vel! Alias aliquid debitis facilis harum id inventore ipsam, laborum, laudantium magni minus molestiae necessitatibus provident quae quasi qui quibusdam quod quos saepe sit?</p>
+      </div>
+    </div>
+
+    <div class="col-10 col-md mx-auto flex flex-col">
+      <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-center object-cover" src="/dist/img/templates/annual-report-2-7.jpg">
+      <div class="h-1 md:h-2 bg-tbr2-red"></div>
+    </div>
+  </div>
+
+  <div class="relative pt-64">
+    <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 w-full h-1/2-screen object-cover object-center" src="/dist/img/templates/annual-report-2-2.jpg">
+
+    <div class="mr-10 p-16 bg-tbr2-black text-white relative">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-6 font-extrabold uppercase"><span>About us</span></div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-3">
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor doloribus libero quo ratione rem sit voluptate. Aspernatur dicta dolorem fugiat incidunt nam quibusdam quod recusandae, reiciendis rerum vel. Architecto autem consequatur culpa eveniet ipsa magnam mollitia natus nisi quae, quas, quasi quibusdam, reiciendis temporibus vel veniam. Ea, eius, minus?</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio esse facilis laborum libero natus quam quibusdam sunt temporibus vitae voluptates?</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row no-gutters p-16">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-md mb-8 md:pr-16 text-em-10 font-extrabold uppercase leading-none"><span>Meet our team</span></div>
+
+    <div class="col-md">
+      <div class="relative w-64 h-64 mb-6">
+        <div class="absolute top-0 w-full h-2 bg-tbr2-red"></div>
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-fit object-center" src="/dist/img/templates/annual-report-2-8.jpg"/>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-6 font-extrabold uppercase leading-none"><span>Tom Jones</span></div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-3">
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor doloribus libero quo ratione rem sit voluptate. Aspernatur dicta dolorem fugiat incidunt nam quibusdam quod recusandae, reiciendis rerum vel. Architecto autem consequatur culpa eveniet ipsa magnam mollitia natus nisi quae, quas, quasi quibusdam, reiciendis temporibus vel veniam. Ea, eius, minus?</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio esse facilis laborum libero natus quam quibusdam sunt temporibus vitae voluptates?</p>
+      </div>
+    </div>
+
+    <div class="col-md">
+      <div class="relative w-64 h-64 mb-6">
+        <div class="absolute top-0 w-full h-2 bg-tbr2-red"></div>
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-fit object-center" src="/dist/img/templates/annual-report-2-9.jpg"/>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-6 font-extrabold uppercase leading-none"><span>Jane Brown</span></div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-3">
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor doloribus libero quo ratione rem sit voluptate. Aspernatur dicta dolorem fugiat incidunt nam quibusdam quod recusandae, reiciendis rerum vel. Architecto autem consequatur culpa eveniet ipsa magnam mollitia natus nisi quae, quas, quasi quibusdam, reiciendis temporibus vel veniam. Ea, eius, minus?</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio esse facilis laborum libero natus quam quibusdam sunt temporibus vitae voluptates?</p>
+      </div>
+    </div>
+
+    <div class="col-md">
+      <div class="relative w-64 h-64 mb-6">
+        <div class="absolute top-0 w-full h-2 bg-tbr2-red"></div>
+        <img avoid-svg-wrapping="true" class="tdi-image w-full h-full object-fit object-center" src="/dist/img/templates/annual-report-2-10.jpg"/>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-6 font-extrabold uppercase leading-none"><span>Peter Blake</span></div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text mb-8 md:pr-16 text-em-3">
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor doloribus libero quo ratione rem sit voluptate. Aspernatur dicta dolorem fugiat incidunt nam quibusdam quod recusandae, reiciendis rerum vel. Architecto autem consequatur culpa eveniet ipsa magnam mollitia natus nisi quae, quas, quasi quibusdam, reiciendis temporibus vel veniam. Ea, eius, minus?</p>
+        <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio esse facilis laborum libero natus quam quibusdam sunt temporibus vitae voluptates?</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="py-20 px-8 bg-tbr2-black text-white text-center">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-8 font-extrabold uppercase"><span>Stay up to date on our latest news</span></div>
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at error est excepturi id iure nam nisi, non odit quibusdam repellat sapiente sit temporibus totam ullam? Ab autem blanditiis consequuntur, cum delectus distinctio, dolorum et facere fuga ipsum, modi mollitia nemo quibusdam quisquam quo saepe sed voluptates. Magni, pariatur ut!</span></div>
+
+    <div class="row justify-center max-w-lg mx-auto">
+      <input class="col-7 mr-2" />
+      <button class="col-3 p-0 font-extrabold uppercase bg-tbr2-red">Sign up</button>
+    </div>
+  </div>
+</div>
 </div>
 </body>
 </html>
