Not completed section 4

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
     </div>
   </div>
 </div>
-<!--3-->
+<!-- 3 -->
 <div>
   <div class="row px-16 pb-16 md:pb-32 no-gutters">
     <div class="col-md-7 pt-20">
@@ -232,6 +232,110 @@
   </div>
 
   <div class="py-20 px-8 bg-tbr2-black text-white text-center">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-8 font-extrabold uppercase"><span>Stay up to date on our latest news</span></div>
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at error est excepturi id iure nam nisi, non odit quibusdam repellat sapiente sit temporibus totam ullam? Ab autem blanditiis consequuntur, cum delectus distinctio, dolorum et facere fuga ipsum, modi mollitia nemo quibusdam quisquam quo saepe sed voluptates. Magni, pariatur ut!</span></div>
+
+    <div class="row justify-center max-w-lg mx-auto">
+      <input class="col-7 mr-2" />
+      <button class="col-3 p-0 font-extrabold uppercase bg-tbr2-red">Sign up</button>
+    </div>
+  </div>
+</div>
+<!-- 4 -->
+<div>
+  <div class="relative min-h-screen pt-64">
+    <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 w-full h-full object-cover object-center" src="/dist/img/templates/annual-report-2-3.jpg">
+
+    <div class="relative ml-20 md:ml-64 p-8 pb-12 bg-tbr2-gray">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-6 leading-none tracking-tighter font-extrabold text-tbr2-red uppercase"><span>About</span></div>
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pb-6 text-em-9 leading-none tracking-tighter font-extrabold uppercase"><span>Our company</span></div>
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-3 italic"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolorum est ex explicabo, facilis illo illum iusto laudantium libero, modi nobis odio possimus quos reiciendis soluta, suscipit veniam. Aliquam commodi corporis culpa error, explicabo ipsum iure iusto labore maiores molestiae nam nihil pariatur quo recusandae similique sunt tempora totam veniam!</span></div>
+      <div class="absolute bottom-0 left-0 w-full h-4 mt-8 bg-tbr2-red"></div>
+    </div>
+  </div>
+
+  <div class="py-16 pl-16">
+    <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pb-8 text-em-9 leading-none tracking-tighter font-extrabold uppercase"><span>Our timeline</span></div>
+
+    <div class="row no-gutters pb-10 md:pb-0">
+      <div class="col-auto flex flex-col items-center pb-8 md:pb-0 mr-8">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pb-8 md:pt-4 text-em-9 leading-none tracking-tighter font-extrabold uppercase text-tbr2-red"><span>2018</span></div>
+
+        <div class="w-1 h-full bg-tbr2-black"></div>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-8 md:pb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda error et labore saepe ullam! Asperiores ea, molestiae nihil optio perferendis quia quis ut velit vitae voluptatibus? Adipisci debitis dicta dolor dolores laboriosam magni modi neque obcaecati provident temporibus? Beatae blanditiis consectetur cum cumque cupiditate delectus deserunt, dolore eligendi eveniet excepturi expedita fuga hic impedit incidunt ipsa ipsam iste labore magnam maiores molestiae molestias natus nisi nobis nostrum numquam officiis praesentium quam quod quos, repudiandae similique suscipit ullam voluptates! Aliquam deserunt dolor dolorem eaque eos excepturi harum mollitia nam, natus nisi quam quia ratione repellat repellendus ullam? Excepturi fugit natus sunt.</span></div>
+    </div>
+
+    <div class="row no-gutters pb-10 md:pb-0">
+      <div class="col-auto flex flex-col items-center pb-8 md:pb-0 mr-8">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pb-8 md:pt-4 text-em-9 leading-none tracking-tighter font-extrabold uppercase text-tbr2-red"><span>2019</span></div>
+
+        <div class="w-1 h-full bg-tbr2-black"></div>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-8 md:pb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda error et labore saepe ullam! Asperiores ea, molestiae nihil optio perferendis quia quis ut velit vitae voluptatibus? Adipisci debitis dicta dolor dolores laboriosam magni modi neque obcaecati provident temporibus? Beatae blanditiis consectetur cum cumque cupiditate delectus deserunt, dolore eligendi eveniet excepturi expedita fuga hic impedit incidunt ipsa ipsam iste labore magnam maiores molestiae molestias natus nisi nobis nostrum numquam officiis praesentium quam quod quos, repudiandae similique suscipit ullam voluptates! Aliquam deserunt dolor dolorem eaque eos excepturi harum mollitia nam, natus nisi quam quia ratione repellat repellendus ullam? Excepturi fugit natus sunt.</span></div>
+    </div>
+
+    <div class="row no-gutters">
+      <div class="col-auto flex flex-col items-center pb-8 md:pb-0 mr-8">
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text pb-8 md:pt-4 text-em-9 leading-none tracking-tighter font-extrabold uppercase text-tbr2-red"><span>2020</span></div>
+      </div>
+
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-8 md:pb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda error et labore saepe ullam! Asperiores ea, molestiae nihil optio perferendis quia quis ut velit vitae voluptatibus? Adipisci debitis dicta dolor dolores laboriosam magni modi neque obcaecati provident temporibus? Beatae blanditiis consectetur cum cumque cupiditate delectus deserunt, dolore eligendi eveniet excepturi expedita fuga hic impedit incidunt ipsa ipsam iste labore magnam maiores molestiae molestias natus nisi nobis nostrum numquam officiis praesentium quam quod quos, repudiandae similique suscipit ullam voluptates! Aliquam deserunt dolor dolorem eaque eos excepturi harum mollitia nam, natus nisi quam quia ratione repellat repellendus ullam? Excepturi fugit natus sunt.</span></div>
+    </div>
+  </div>
+
+  <div class="flex flex-col justify-end relative min-h-screen pb-12">
+    <img avoid-svg-wrapping="true" class="tdi-image absolute top-0 left-0 min-h-3/4-screen object-cover object-center" src="/dist/img/templates/annual-report-2-11.jpg">
+
+    <div class="row no-gutters flex-grow-0 md:items-center mx-12 md:mx-48 p-16 pr-8 bg-tbr2-black text-white relative">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-md-2 mb-8 md:mb-0 md:pr-16 text-em-6 font-extrabold uppercase"><span>Our values</span></div>
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-md md:pr-16 text-em-3 italic"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor doloribus libero quo ratione rem sit voluptate. Aspernatur dicta dolorem fugiat incidunt nam quibusdam quod recusandae, reiciendis rerum vel. Architecto autem consequatur culpa eveniet ipsa magnam mollitia natus nisi quae, quas, quasi quibusdam, reiciendis temporibus vel veniam. Ea, eius, minus?</span></div>
+    </div>
+  </div>
+
+  <div class="py-16 md:pl-16 pl-12 bg-tbr2-gray">
+    <div class="row no-gutters">
+      <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text col-md-4 mb-8 md:mb-0 pr-16 text-em-9 font-extrabold uppercase"><span>Reliable support from our four international locations</span></div>
+    </div>
+
+    <img class="tdi-image w-full object-cover object-center" src="/dist/img/templates/annual-report-2-12.jpg" />
+
+    <div class="row-md no-gutters pr-16">
+      <div class="col-md pb-16">
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase"><span>New York, </span></span>
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase text-tbr2-red"><span>USA</span></span>
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste mollitia porro quidem sequi vel. Alias amet at deleniti distinctio doloribus eligendi nemo numquam, voluptate. Aperiam ex nihil omnis sapiente tempora.</span></div>
+      </div>
+
+      <div class="col-md pb-16">
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase"><span>Ontario, </span></span>
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase text-tbr2-red"><span>Canada</span></span>
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste mollitia porro quidem sequi vel. Alias amet at deleniti distinctio doloribus eligendi nemo numquam, voluptate. Aperiam ex nihil omnis sapiente tempora.</span></div>
+      </div>
+    </div>
+
+    <div class="row-md no-gutters pr-16">
+      <div class="col-md pb-16">
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase"><span>London, </span></span>
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase text-tbr2-red"><span>UK</span></span>
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste mollitia porro quidem sequi vel. Alias amet at deleniti distinctio doloribus eligendi nemo numquam, voluptate. Aperiam ex nihil omnis sapiente tempora.</span></div>
+      </div>
+
+      <div class="col-md pb-16">
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase"><span>Rome, </span></span>
+        <span placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-9 font-extrabold uppercase text-tbr2-red"><span>Italy</span></span>
+        <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste mollitia porro quidem sequi vel. Alias amet at deleniti distinctio doloribus eligendi nemo numquam, voluptate. Aperiam ex nihil omnis sapiente tempora.</span></div>
+      </div>
+    </div>
+  </div>
+
+  <div></div>
+
+  <div></div>
+
+  <div class="py-20 px-8 bg-tbr2-gray text-center">
     <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-8 font-extrabold uppercase"><span>Stay up to date on our latest news</span></div>
     <div placeholder="Write some text here..." placeholder-target="textarea" class="tdi-text max-w-lg mx-auto mb-10 text-em-3"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at error est excepturi id iure nam nisi, non odit quibusdam repellat sapiente sit temporibus totam ullam? Ab autem blanditiis consequuntur, cum delectus distinctio, dolorum et facere fuga ipsum, modi mollitia nemo quibusdam quisquam quo saepe sed voluptates. Magni, pariatur ut!</span></div>
 
